fix: adjust rainbow position to prevent top cropping issue

--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -58,7 +58,7 @@
   
   .rainbowContainer {
     position: absolute;
-    top: 600px;
+    top: 680px;
     left: 50%;
     right: 50%;
     width: 600px;
